parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__test-lexer-8.snap
---
source: parser/src/lexer/mod.rs
description: "{}:"
---
[
    Token {
        kind: LeftBracket,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Colon,
        value: None,
        start: 2,
        end: 3,
    },
]
