parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__unicode-string-literals-2.snap
---
source: parser/src/lexer/mod.rs
description: "u\"\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"\"",
        ),
        start: 0,
        end: 3,
    },
]
