parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__unicode-string-literals-5.snap
---
source: parser/src/lexer/mod.rs
description: "u\"\"\"hello\"\"\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"\"\"hello\"\"\"",
        ),
        start: 0,
        end: 12,
    },
]
